# VKR_KOS_TBOT

./: README.md
kos_tbot/: CMakeLists.txt  README.md  SETUP.md  image-build.sh
kos_tbot/einit/: CMakeLists.txt
kos_tbot/einit/src/: init.yaml.in  security.psl  trusted.psl
kos_tbot/resources/edl/: Subscriber.edl
kos_tbot/resources/ramfs/etc/: ntp.conf
kos_tbot/resources/sdcard/etc/: dhcpcd.conf  hosts
kos_tbot/subscriber/: CMakeLists.txt
kos_tbot/subscriber/src/: general.h  gpio.cpp  gpioled.h  main.cpp  uart.c
